# ndi-viewer

./: .gitignore  AGENTS.md  README.md  requirements.txt  viewer.py  virtual_sender.py
ios/: AppIcon.icns  CMakeLists.txt  Info.plist
ios/src/: BridgingHeader.h  MainDashboard.swift  MetalVideoView.metal  MetalVideoView.swift  NDIAudioPlayer.swift  NDIConnectionManager.swift  NDIEngine.cpp  NDIEngine.h  NDIEngineWrapper.h  NDIEngineWrapper.mm  NDIViewerApp.swift  SidebarView.swift
